--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.3",
+    "vue-select": "^4.0.0-beta.3",
+    "vue-yandex-maps": "^0.12.3",
     "vuelidate": "^0.7.7",
     "vuex": "^4.0.0"
   },
