--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "materialize-css": "^1.0.0-rc.2",
+    "qalendar": "^1.5.1",
     "register-service-worker": "^1.7.2",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^4.1.1",
